// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action creators > startCreatingTransaction > pushes the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
  {
    "payload": [
      {
        "id": 5,
        "user": {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`action creators > startDeletingTransaction > updates the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
  {
    "payload": [
      {
        "id": 5,
        "user": {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`action creators > startLoadingTransactions > pushes the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  {
    "payload": [
      {
        "id": 2,
      },
      {
        "id": 3,
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`transaction reducer > with a transactionsLoaded action > merges transaction to state 1`] = `
{
  "2": {
    "id": 2,
  },
  "3": {
    "id": 3,
  },
}
`;
